--- a/roles/etcd/templates/etcd.yaml.j2
+++ b/roles/etcd/templates/etcd.yaml.j2
@@ -1,6 +1,6 @@
 {% macro initial_cluster() -%}
 {% for host in groups[etcd_peers_group] -%}
-  {{ hostvars[host]['ansible_hostname'] }}={{ etcd_peer_url_scheme }}://{{ hostvars[host]['ansible_' + etcd.interface].ipv4.address }}:{{ etcd.peer_port }}
+  {{ etcd_initial_cluster_name }}={{ etcd_peer_url_scheme }}://{{ hostvars[host]['ansible_' + etcd.interface].ipv4.address }}:{{ etcd.peer_port }}
   {%- if not loop.last -%},{%- endif -%}
 {%- endfor -%}
 {% endmacro -%}
